# learningOpenGL

./: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
include/shaders/: shaders.hpp
resources/shaders/: fragment.frag  vertex.vert
src/: main.cpp
src/shaders/: shaders.cpp
